--- a/view/css/HorasExtras1.css
+++ b/view/css/HorasExtras1.css
@@ -1,20 +1,3 @@
-/* estilo para el formulario del registro del cliente*/
-#regcliente{
-  position: absolute;
-  left: 450px;
-}
-/* estuilo para el formulario de actualizar cliente*/
-.actcliente01{
-  position: absolute;
-  left: 450px;
-  top: 250px;
-}
-/*
-#movercargo{
-  position: absolute;
-  left: 1000px;
-}*/
-
 /*estilo para pocicionar el titulo del recargo*/
 #recar{
   position: absolute;
@@ -39,5 +22,27 @@ position: absolute;
 position: absolute;
   top: 350px;
   left: 650px;
+}
 
+/*estilos para cliente*/
+
+#cliente{
+  position: absolute;
+  top: 20px;
+}
+#actualizar{
+  position: absolute;
+  top: -70px;
+  left: 600px;
+}
+#regcliente{
+  position: absolute;
+  left: 450px;
+
+}
+
+#btn-guardar{
+  position: absolute;
+  top: 450px;
+  left: 190px;
 }
