--- a/view/css/HorasExtras1.css
+++ b/view/css/HorasExtras1.css
@@ -46,3 +46,14 @@ position: absolute;
   top: 450px;
   left: 190px;
 }
+
+/*#cvs{
+position: absolute;
+left: -135px;
+
+}*/
+#moverarch{
+  position: absolute;
+  top: 255px;
+  left: 255px;
+}
