--- a/view/css/menu_admin.css
+++ b/view/css/menu_admin.css
@@ -11,7 +11,6 @@
   margin-right: 0px;
 }
 
-
 .caret {
     color: #FAD98A;
   display: inline-block;
@@ -23,13 +22,14 @@
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
 }
+
 .caret.right {
-color: #FAD98A;
+  color: #FAD98A;
   border-top: 0px solid transparent;
   border-right: 0px solid transparent;
   border-left: 0px solid;
-
 }
+
 .inicio{
 position: absolute;
 font-size: 25px;
@@ -226,9 +226,6 @@ top: 25px;
   top: -120px;
 }/*------------------------------------------------------------------------------------------*/
 
-
-
-<<<<<<< HEAD
 #a12{
 background: #EBE4D8;
 }
@@ -237,10 +234,6 @@ background: #EBE4D8;
 background: #EBE4D8;
 }
 
-#main{
-  background: #EBE4D8;
+#menucolor{
+  color: #EBE4D8;
 }
-=======
-
-
->>>>>>> 528bd6351a6e77c7fd19ca60400284560f5645ef
